# read-tailor-cli

./: .env.example  .gitignore  Cargo.toml  README.md  bookcli.toml.example
docs/: prd.md
src/: ai.rs  cli.rs  config.rs  main.rs
src/pipeline/: helpers.rs  mod.rs  steps.rs  templates.rs  types.rs
tests/: step2_research_clarified.md
tests/step2_approaches/: ai_utils.py  config.py  evaluator.py  fallback.py  html_standard.md  plan_a_ai_gen_script.py  plan_b_ai_yaml_mapping.py  plan_c_ai_direct_html.py  plan_d_heuristic.py  plan_e_regex_ai.py  plan_f_constrained.py  results.json  runner.py  standard_book.html
tests/step2_approaches/outputs/: plan_a.normalized.html  plan_a.structure.json  plan_b.normalized.html  plan_b.structure.json  plan_c.normalized.html  plan_c.structure.json  plan_d.normalized.html  plan_e.structure.json
